Modified files for hosting on heroku

--- a/adoptions/templates/home.html
+++ b/adoptions/templates/home.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
 {% extends "base.html"%}
 {% block content %}
-<div>
-    {% for pet in pets %}
-        <div class ="petname">
-            <a href="{% url 'pet_detail' pet.id %}">
-            <h2>{{pet.name|capfirst}}</h2>
-            </a>
-            <p>{{pet.species}}</p>
-            {% if pet.breed %}
-                <p>Breed: {{pet.breed}}</p>
-            {% endif %}
-            <p class ="hidden">{{pet.description}}</p>
-        </div>
-{% endfor %}
-</div>
+<body style="background-color: rgb(0, 0, 0)">
+    <div id="main_page">
+        <h1 style="text-align: center;font-weight: bold;font-size: xx-large;background-color:rgb(197, 242, 251);color: darkcyan;">Pets Waiting for you</h1>
+        <div class ="outer_wrap">
+            {% for pet in pets %}
+            <div class ="petname">
+                <a href="{% url 'pet_detail' pet.id %} " >
+                <h1 class="pet_name">{{pet.name|capfirst}}</h1>
+                </a>
+                <p>Species : {{pet.species}}</p>
+                {% if pet.breed %}
+                    <p>Breed: {{pet.breed}}</p>
+                {% endif %}
+                <p class ="hidden">{{pet.description}}</p>
+            </div>
+    {% endfor %}
+        </div>   
+    </div> 
+    <style>
+        /* .outer_wrap{
+            display: grid;
+        } */
+        #main_page 
+        {
+            background-color: rgb(221, 247, 252);
+        }
+        .pet_name
+        {
+            color:rgb(204, 0, 255);
+            font-weight: bolder;
+        }
+        .petname 
+        {
+            display: grid;
+            font-weight: bolder;
+            font-size: large;
+            font-family: sans-serif;
+            padding: 10px 10px 10px 10px;
+            margin: 10px 10px 10px 10px;
+            border : 10px solid rgb(255, 255, 255);
+            border-radius: 5px;
+            box-shadow: 0 4px 8px 0 rgba(255, 0, 0, 0.2);
+            transition:1.5s;
+            background-color: rgb(221, 247, 252);
+            border-radius: 1px;
+        }
+        
+        /* On mouse-over, add a deeper shadow */
+        .petname:hover
+        {
+        box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2);
+        border-color: rgb(170, 170, 255);
+        border-radius: 15px 50px;
+        background-color: whitesmoke;
+        }
+        .petname:hover .pet_name{
+            color:aqua;
+        }
+        /* .wrap_card:hover
+        {
+            border-color: 10px solid blue;
+        } */
+
+        /* Add some padding inside the card container */
+        .container 
+        {
+        padding: 2px 16px;
+        }
+    </style>
+</body>
+
 {% endblock %}
