--- a/adoptions/templates/base.html
+++ b/adoptions/templates/base.html
@@ -3,33 +3,98 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>Home - Wisdom Pet Medicine</title>
+        <title>Home-Pet-Adoption</title>
         <link rel="stylesheet" id="ample-style-css" href="{% static 'style.css' %}" type="text/css" media="all">
     </head>
     <body class="wide">
+        
         <div id="page" class="hfeed site">
-            <header>
-                <div class="header">
-                    <div class="main-head-wrap inner-wrap clearfix">
-                        <div id="header-logo-image">
-                            <a href="/">
-                                <img src="{% static 'images/logo.png' %}" alt="Wisdom Pet Medicine">
-                            </a>
+            <header style="background-color: rgb(192, 250, 255);">
+                <div class="header" style="padding-top: 10px;border: 10px solid black;">
+                    <div class="main-head-wrap inner-wrap clearfix"> 
+                        <div id="header-logo-image" style="margin-top: 40px;">
+                            <div class="dog" >
+                                <div class="torso">
+                                    <div class="fur">
+                                        <div class="spot"></div>
+                                    </div>
+                                    <div class="neck">
+                                        <div class="fur"></div>
+                                        <div class="head">
+                                            <div class="fur">
+                                                <div class="snout"></div>
+                                            </div>
+                                            <div class="ears">
+                                                <div class="ear">
+                                                    <div class="fur"></div>
+                                                </div>
+                                                <div class="ear">
+                                                    <div class="fur"></div>
+                                                </div>
+                                            </div>
+                                            <div class="eye"></div>
+                                        </div>
+                                        <div class="collar"></div>
+                                    </div>
+                                    <div class="legs">
+                                        <div class="leg">
+                                            <div class="fur"></div>
+                                            <div class="leg-inner">
+                                                <div class="fur"></div>
+                                            </div>
+                                        </div>
+                                        <div class="leg">
+                                            <div class="fur"></div>
+                                            <div class="leg-inner">
+                                                <div class="fur"></div>
+                                            </div>
+                                        </div>
+                                        <div class="leg">
+                                            <div class="fur"></div>
+                                            <div class="leg-inner">
+                                                <div class="fur"></div>
+                                            </div>
+                                        </div>
+                                        <div class="leg">
+                                            <div class="fur"></div>
+                                            <div class="leg-inner">
+                                                <div class="fur"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tail">
+                                        <div class="tail">
+                                            <div class="tail">
+                                                <div class="tail -end">
+                                                    <div class="tail ">
+                                                        <div class="tail">
+                                                            <div class="tail">
+                                                                <div class="tail"></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div id="header-text" class="">
                             <h1 id="site-title">
-                                <a href="/" title="Wisdom Pet Medicine" rel="home">Wisdom Pet Medicine</a>
+                                <a href="/" title="Pet-Adoption" rel="home">Pet-Adoption</a>
                             </h1>
-                            <p>We treat your pets like we treat our own.</p>
+                            <p style="font-size:x-large">A little love is all they need. Adopt pets.</p>
                         </div>
                     </div>
-                    <img src="{% static 'images/header.jpg' %}" alt="Wisdom Pet Medicine">
+                    <img src="{% static 'images/header.jpg' %}" alt="Pet-image" style="margin-left: auto;">
                 </div>
             </header>
-            <div class="main-wrapper">
+            
+            <div class="main-wrapper" style="background-color: rgb(255, 255, 255);">
                 <div class="single-page clearfix">
                     <div class="inner-wrap">
-                        <p>Wisdom Pet Medicine strives to blend the best in traditional and alternative medicine in the diagnosis and treatment of health conditions in companion animals, including dogs, cats, birds, reptiles, rodents, and fish. We apply the latest healthcare technology, along with the wisdom garnered in the centuries old tradition of veterinary medicine, to find the safest and most effective treatments and cures, while maintaining a caring relationship with our patients and their guardians.</p>
+                        <p style="font-size: 25px;font-family: cursive;background-color: rgb(217, 249, 249);color: rgb(84, 51, 234);padding:10px"> Pet adoption is the process of transferring responsibility for a pet that was previously owned by another party such as a person, shelter, or rescue organization. Common sources for adoptable pets are animal shelters and rescue groups. Some organizations give adopters ownership of the pet, while others use a guardianship model wherein the organization retains some control over the animal's future use or care.<br><br>Online pet adoption sites have databases of pets being housed by thousands of animal shelters and rescue groups, and are searchable by the public.</p>
                         <hr>
                         <div>
                         {% block content %}
@@ -40,10 +105,10 @@
             </div>
             <footer id="colophon">
                 <div class="inner-wrap">
-                    Wisdom Pet Medicine is a fictitious brand created by Lynda.com, solely for the purpose of training. All products and people associated with Wisdom Pet Medicine are also fictitious. Any resemblance to real brands, products, or people is purely coincidental. Please see your veterinarian for all matters related to your pet's health.
+                    <p style="text-align:center;font-size: large;color: white;">©Made by Pratham</p>
                 </div>
             </footer>
         </div>
-        <script src =" { % static 'main.js' %} "></script>
+        <script src =" { % static 'main.js' % } "></script>
     </body>
 </html>
